tests/script_errors/heredoc_tailing/error.txt
Error: 
    1 | let tailing = """:P
      |               ^^^ It looks like you have characters tailing the here doc opening, it needs to be followed by a newline